# Flask_Authentication_API

./: README.md  certificate testing.py  pyproject.toml
docs/: FUTURE_PLANS.md
scripts/: run_Authentication_API.sh  run_app.sh
src/Application/: app.py
src/Application/extensions/: JWT_authentication.py
src/authentication_api/: Authentication_API.py  extensions.py
src/authentication_api/models/: jwt.py  signing_keys.py  user.py
src/testing_client/: Client.py
